# spelllsp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: parsers.h  pcre_iterator.h  spell_lsp_server.cpp  spell_lsp_server.h
